<resources>
    <string name="app_name">学生评教系统</string>
    <string name="connection_test">Connection Test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">登录</string>
    <string name="exit_button">退出</string>
    <string name="username_label">用户名</string>
    <string name="password_label">密码</string>
    <string name="aspect_one_desc">老师有责任心，爱岗敬业，品行端正。老师关心我的学习和生活，是我做人、做事、做学问的榜样。</string>
    <string name="aspect_one_title">教师师德</string>
    <string name="eval_total_title">总体评价</string>
    <string name="eval_total_desc">拖动滑块来为教学评分，可评1–5分。</string>
    <string name="button_save">保存</string>
    <string name="current_version">版本 0.0.1</string>
    <string name="overview_desc">全部方面评分均为满分时为满星，其余情况为半星。满星评价不可超过可评价课程的20%，若可评价课程小于5门则无法进行满星评价。点击右下角按钮上传评价信息。</string>
    <string name="eval_history_title">评教历史</string>
    <string name="login_title">登录</string>
    <string name="not_logged_in_prompt">点击左上角菜单，选择登录</string>
    <string name="not_logged_in_title">未登录</string>
    <string name="clear_cache_text">清除缓存并登出</string>
    <string name="network_error_text">网络错误</string>
    <string name="incorrect_password_text">用户名或密码错误</string>
    <string name="logging_in_text">正在登录</string>
    <string name="login_success_text">登录成功</string>
    <string name="comment_hint">在此填写评语，需多于10个字符</string>
    <string name="comment_title">评语</string>
    <string name="dash">-</string>
    <string name="credential_expired_title">登录信息已过期</string>
    <string name="retry_login_prompt">请尝试重新登录或重启应用</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="about_title">关于</string>
    <string name="course_teacher">任课教师：%s</string>
    <string name="course_semester">第%d学期</string>
    <string name="course_year">%d - %d</string>
    <string name="detail_title">评教详情</string>
    <string name="history_rate">评分：%d</string>
    <string name="history_comment">评语：%s</string>
    <string name="stat_average">平均评分：%.2f</string>
    <string name="stat_student_num">共%d人评教</string>
</resources>
