<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="live.bokurano.evaluationclient.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail.DetailFragment">

        <TextView
            android:id="@+id/course_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_margin"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:text="@{viewModel.evaluation.courseName}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="软件项目实践" />

        <TextView
            android:id="@+id/course_teacher_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_margin"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:text="@{@string/course_teacher(viewModel.evaluation.courseTeacher)}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_name_text"
            tools:text="任课教师: 张三" />

        <TextView
            android:id="@+id/course_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding_margin"
            android:text="@{@string/course_year(viewModel.evaluation.courseYear,viewModel.evaluation.courseYear+1)}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/course_teacher_text"
            app:layout_constraintEnd_toStartOf="@+id/course_semester_text"
            tools:text="2019 - 2020" />

        <TextView
            android:id="@+id/course_semester_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding_margin"
            android:text="@{@string/course_semester(viewModel.evaluation.courseSemester)}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/course_year_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="第2学期" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView2" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_teacher_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/eval_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/detail_item"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/eval_comment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:paddingTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/comment_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/comment_title" />

                <EditText
                    android:id="@+id/eval_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/comment_hint"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:text="@{viewModel.evaluation.comment}" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/button_save"
                    tools:text="@string/button_save" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>